--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -292,7 +292,7 @@ that node are set to 0.
 
 
 
-\subsection{Hidden Markov Model}
+\subsection{Hidden Markov Model}\label{ModelHMM}
 
 A belief network can be made to model a dynamic system by using a \textbf{Markov
 chain} to represent a feature at different points in time as random
