--- a/sections/Design/BNDesig/CondProbTables.tex
+++ b/sections/Design/BNDesig/CondProbTables.tex
@@ -20,13 +20,13 @@ vector.}
 
 \begin{table}[H]
 \centering
-\begin{tabular}{|l|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|l|p{1.2cm}|p{1.2cm}|}
+\begin{tabular}{|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|}
 \hline
 \multicolumn{10}{|l|}{P(SD\_1|Vector\_1, Vector\_2)} \\\hline
 Vector\_2 & \multicolumn{3}{l|}{41cm/s} & \multicolumn{3}{l|}{57cm/s} &
 \multicolumn{3}{l|}{BV}\\\hline
-Vector\_1 & 41cm/s      &  57cm/s     & BVcm/s      & 41cm/s      & 57cm/s     
-& BVcm/s & 41cm/s & 57cm/s & BVcm/s \\\hline
+Vector\_1 & 41cm/s      &  57cm/s     & BV     & 41cm/s      & 57cm/s     
+& BV & 41cm/s & 57cm/s & BV \\\hline
 [0-60]& 0 & 0 & 0 & 0 & 0 & 2/6 = 0.33& 0 & 2/15 = 0.13 & 1/12 = 0.08 \\\hline
 [60-75]& 1/3 = 0.33 & 0 & 5/12 = 0.42 & 0 & 2/6 = 0.33 & 1/6 = 0.17 & 1/6 = 0.17
 & 9/15 = 0.6 & 6/12 = 0.5\\ \hline
